--- a/src/components/PresetLibrary/PresetLibrary.module.css
+++ b/src/components/PresetLibrary/PresetLibrary.module.css
@@ -14,7 +14,8 @@
   margin: 10px;
   padding: 10px;
   pointer-events: all;
-  min-width: 900px;
+  max-width: 900px;
+  width: 100%;
 }
 
 .container {
@@ -22,14 +23,14 @@
   display: flex;
   max-width: 900px;
   width: 100%;
-  
 }
 
 .table {
   width: 70%;
   height: fit-content;
   margin-bottom: 20px;
-  /* min-width: 600px; */
+  position: relative;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 .table th {
@@ -41,10 +42,30 @@
 .table td {
   height: 30px;
   padding-left: 10px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  
   cursor: pointer;
 }
 
+.table tr {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.table tr:last-child {
+  border-bottom: none;
+}
+
+.table tbody {
+  display: block;
+  width: 100%; 
+  overflow-y: auto; 
+  height: 320px;
+ 
+}
+.table tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
 .selected {
   background-color: rgba(var(--waveform-color), 0.15);
   color: color-mix(
@@ -81,6 +102,7 @@
     rgba(var(--waveform-color), 1) 40%,
     rgba(255, 255, 255, 0.95)
   );
+  margin-right: 5px;
 }
 
 .description p {
@@ -194,4 +216,84 @@
   );
   border: none;
   outline: none;
+}
+
+.delete {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 6px;
+  padding-right: 10px;
+  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.1);
+}
+
+.delete input {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  max-width: 60%;
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 6px;
+  padding: 5px;
+  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.1);
+  text-transform: uppercase;
+  width: 100%;
+  background-color: transparent;
+  color: color-mix(
+    in srgb,
+    rgba(var(--waveform-color), 1) 40%,
+    rgba(255, 255, 255, 0.95)
+  );
+  outline: none;
+}
+
+.buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.buttons button {
+  padding: 10px 14px 8px 15px;
+  border: none;
+  border-radius: 4px;
+  background: rgba(var(--waveform-color), 0.6);
+  color: color-mix(in srgb, rgba(var(--waveform-color), 1) 20%, #fff);
+  text-transform: uppercase;
+}
+
+.buttons :nth-child(2) {
+  background: rgba(255, 255, 255, 0.15);
+  color: #ffffff53;
+}
+
+.share {
+  padding-top: 10px;
+  letter-spacing: 1.1px;
+}
+
+.share_url {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: left;
+
+  border: 1px solid rgba(255, 255, 255, 0.25);
+  border-radius: 6px;
+  padding-top: 8px;
+  padding-bottom: 7px;
+  padding-left: 8px;
+  padding-right: 8px;
+  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.1);
+  text-transform: uppercase;
+  letter-spacing: calc(var(--main-synth-ui-font-size) * 0.1);
+
+  background-color: transparent;
+  color: color-mix(
+    in srgb,
+    rgba(var(--waveform-color), 1) 40%,
+    rgba(255, 255, 255, 0.95)
+  );
+  outline: none;
+}
+
+.message {
+  padding-bottom: 10px;
 }
